--- a/FrontEnd/unsplash/src/styles/register.css
+++ b/FrontEnd/unsplash/src/styles/register.css
@@ -10,7 +10,7 @@ body {
 }
 
 #rg {
-  background-image: url("../pexels.jpg");
+  background-image: url("../Images/pexels.jpg");
   background-size: cover;
   height: 100vh;
 }
