--- a/FrontEnd/unsplash/src/styles/header.css
+++ b/FrontEnd/unsplash/src/styles/header.css
@@ -23,7 +23,7 @@ body {
 
 #search {
   height: 35px;
-  width: 130%;
+  width: 250px;
   margin-left: 2px;
   outline: none;
   font-size: 95%;
@@ -76,6 +76,12 @@ body {
   user-select: none;
 }
 
+#menu-icon {
+  margin-top: 10px;
+  display: none;
+  margin-left: 95px;
+}
+
 #simple-popper {
   border: 2px black solid;
   margin-top: 7px;
@@ -90,8 +96,8 @@ body {
 
   border-radius: 7px;
   word-wrap: break-word;
-  background-color: rgba(224, 212, 212, 0.253);
-  z-index: 2;
+  background-color: rgb(255, 255, 255);
+  z-index: 3;
 }
 
 #user {
@@ -139,11 +145,25 @@ body {
 
 @media only screen and (max-width: 850px) {
   #add {
-    width: 110px;
-    font-size: 10px;
+    display: none;
   }
+
+  #logo {
+    width: 6rem;
+    margin-left: 5px;
+  }
+
   #search {
-    width: 100px;
-    margin-top: 10px;
+    width: 200px;
+  }
+
+  #menu-icon {
+    display: block;
+    margin-left: 65%;
+  }
+
+  #avt,
+  .gallery {
+    display: none;
   }
 }
